tests/miniJava/neg/005682_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } else class java { }
